force-app/main/default/objects/Reviewers_and_Restrictions__c/Reviewers_and_Restrictions__c.object-meta.xml
<CustomObject>
    <label>Reviewers and Restrictions</label>
    <nameField>
        <displayFormat>RAR-{000000}</displayFormat>
        <label>Reviewers and Restrictions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewers and Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>