force-app/main/default/objects/Reviewers_and_Restrictions__c/fields/Area_of_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Expertise__c</fullName>
    <label>Expertise</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>