force-app/main/default/objects/Reviewers_and_Restrictions__c/fields/Explain_if_you_know_the_reviewer__c.field-meta.xml
<CustomField>
    <fullName>Explain_if_you_know_the_reviewer__c</fullName>
    <description>Explain if you know the reviewer personally</description>
    <label>Explain if you know the reviewer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>