force-app/main/default/objects/Reviewers_and_Restrictions__c/fields/Grants__c.field-meta.xml
<CustomField>
    <fullName>Grants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grants</label>
    <referenceTo>Grants__c</referenceTo>
    <relationshipLabel>Reviewers and Restrictions</relationshipLabel>
    <relationshipName>Reviewers_and_Restrictions</relationshipName>
    <type>Lookup</type>
</CustomField>