force-app/main/default/objects/Reviewers_and_Restrictions__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reviewers and Restrictions</relationshipLabel>
    <relationshipName>Reviewers_and_Restrictions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>