force-app/main/default/objects/Reviewers_and_Restrictions__c/fields/Reason_for_being_appropriate_to_review__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_being_appropriate_to_review__c</fullName>
    <description>Reason for being appropriate to review/restrict your application</description>
    <label>Reason to choose</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>