force-app/main/default/objects/Reviewers_and_Restrictions__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Reviewer</fullName>
            </value>
            <value>
                <fullName>Restricted Reviewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>