force-app/main/default/objects/Reviewers_and_Restrictions__c/validationRules/Required_Field_Reason_to_choose.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Field_Reason_to_choose</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Reason_for_being_appropriate_to_review__c )</errorConditionFormula>
    <errorDisplayField>Reason_for_being_appropriate_to_review__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>